-Added new sprites for big bone's thorn attacks to make them look better
-Buffed the amount of defense each piece of the rotten gourd armor gives
-Renamed rotten chunk to moldy chunk, because rotten chunks are already a vanilla item
-Rotten gourd armor now requires old wood to craft along with the moldy chunks
-Increased the drop rate for the skull scepter, warlock's cloak, and warlock's hood from zomboid warlocks
-Fixed moldy chunks stacking to 999 and not 9999
-Nerfed giant tortumor contact damage from 65 to 40
-All spooky mod boss masks now drop from that bosses respective treasure bag in expert mode to be consistent with vanilla
-Spooky mod's pylons now give off colored lighting like vanilla ones do
-The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons
-Lowered the orange spooky ghost's spawnrate
-Resprited the spooky forest and swampy cemetery backgrounds to make them look better
-Nerfed gargoyle scepter base damage from 65 to 35, and the cursed fire balls shot by grug now inflict cursed flames
-The ichor clouds shot by the tongueblade now inflict ichor for a short time, and have a cooler visual effect
-Removed the haunted skull enemy from the mod
-Lowered the spawn rate of the glooper enemy in the cemetery
-Renamed the acid blaster to venom gasser and nerfed its base damage from 50 to 30, its projectile now inflicts venom, pierces enemies, and has a cool new visual effect
-Added a new visual effect for boro's acid breath attack
-Made orro & boro thorn pillars taller
-The harvester's scythe now spawns souls when you hit enemies instead of needing to kill them, and you now need 10 souls in order for them to attack enemies
-Changed the sound effects for the skull smasher when it is ready to throw




~BUGS AND OTHER FIXES~

-Fixed the spooky scroll causing the player sprite direction to spaz out if your cursor was in the middle of your player
-Localized big bone's spawn message because I accidentally forgot to

