@@ -26,7 +26,7 @@ namespace Spooky.Content.Generation
 
             Catacombs.PositionY = (int)Main.worldSurface - (Main.maxTilesY / 8);
 
-            float worldEdgeOffset = Main.maxTilesX >= 6400 ? 7.9f : 8.65f;
+            float worldEdgeOffset = Main.maxTilesX >= 6400 ? 7.9f : 8.55f;
 
             //place biome based on the opposite side of the dungeon
             if (GenVars.dungeonSide == -1)
