@@ -39,8 +39,8 @@ namespace Spooky.Content.NPCs.Friendly
 		{
             NPCID.Sets.ActsLikeTownNPC[Type] = true;
             NPCID.Sets.ShimmerTownTransform[Type] = true;
-			NPCID.Sets.NoTownNPCHappiness[Type] = true;
-			Main.npcFrameCount[NPC.type] = 5;
+            NPCID.Sets.NoTownNPCHappiness[Type] = true;
+            Main.npcFrameCount[NPC.type] = 5;
 
             NPCProfile = new Profiles.StackedNPCProfile(
                 new Profiles.DefaultNPCProfile(Texture, NPCHeadLoader.GetHeadSlot(HeadTexture)),
