@@ -51,7 +51,7 @@ LittleEye: {
 	Awaken: Whoa there, I was trying to take a nap! You must be a pretty curious adventurer to have found your way down here.
 	Quest1: So, there are four different flasks you can make that I can combine into something that will be helpful later. However, I am unable to gather the needed ingredients, so I'll need your help to find them, and then craft the flask with them. To make this first flask, you'll need the following.
 	Quest1Rewards: You made that potion faster than expected. I'll be holding onto this for later use, take this stuff as a reward for your troubles.
-	Quest2: This next flask is similar, but my inability to move prevents me from getting these materials, so I'll need you to craft the next flask with these materials.
+	Quest2: This next flask is similar, but my inability to move still prevents me from getting the ingredients, so I'll need you to craft the next flask with the following.
 	Quest2Rewards: You're getting the hang of this! Here, since I know how much you love my magical little hat, you can have this bootleg version!
 	Quest3: At this point I assume you understand what to do. For this next flask, you'll need the following materials.
 	Quest3Rewards: Good work! I've heard that this giant cotton swab can be used at a shrine somewhere around here to summon a rare creature. Truth is, I just wanna see you fight it because I heard it looks really funny.
