@@ -187,7 +187,8 @@ GourdSlingshotProj.DisplayName: Gourd Slingshot
 MoldyPelletProj.DisplayName: Moldy Pellet
 MoldPelletFly.DisplayName: Mold Fly
 SkullGoop.DisplayName: Skull Goop
-ThornBomb.DisplayName: Thorn Bomb
+ThornBall.DisplayName: Thorn Ball
+ThornBallSpike.DisplayName: Thorn Spike
 LingerThorn.DisplayName: Linger Thorn
 ShroomFlailProj.DisplayName: Fungal Flail
 ShroomHopperPet.DisplayName: Shroom Hopper
